#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psocake
#------------------------------------------------------------------------

Package author: Chunhong "Chuck" Yoon

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-54
2017-1-12 Chunhong Yoon
- Deploy detector distance when manually deploy button is used

Tag: V00-01-53
2017-1-5 David Schneider
- conditional import on logbook to get psocake to run against conda
	
Tag: V00-01-52
2016-12-18 Chunhong Yoon
- Fix PeakFinder bug by removing set_mask function from PyAlgos

Tag: V00-01-51
2016-12-15 Chunhong Yoon
- Fix bug in peak finding for 2D detectors

Tag: V00-01-50
2016-12-09 Chunhong Yoon
- Psocake lite contains peak finder panel

Tag: V00-01-49
2016-11-21 Chunhong Yoon
- Better handling of epic variables, such as photon energy
- Correct handling of Rayonix geometry from psgeom

Tag: V00-01-48
2016-10-26 Chunhong Yoon
- Fix cxi file generation
- Update indexing in small data panel
- Set auto minimum image level to zero

Tag: V00-01-47
2016-10-19 Chunhong Yoon
- Fix CrystFEL geometry to psana geometry

Tag: V00-01-46
2016-10-04 Chunhong Yoon
- clean up for User's meeting

Tag: V00-01-45
2016-08-25 Chunhong Yoon
- Add label propagation

Tag: V00-01-44
2016-08-21 Chunhong Yoon
- Rayonix indexing
- Deploy maunally centred geometry for Rayonix

Tag: V00-01-43
2016-08-19 Chunhong Yoon
- Add crystfel geom to psana geometry

Tag: V00-01-42
2016-08-18 Chunhong Yoon
- Remove plot of polygon mask

Tag: V00-01-41
2016-08-18 Chunhong Yoon
- Fix clenEpics name generated from source

Tag: V00-01-40
2016-08-14 Chunhong Yoon
- Remove hardlink for psgeom
- Fix polygon mask in toggle mode

Tag: V00-01-39
2016-08-13 Chunhong Yoon
- Fix detector distance update
- Auto update small data name
- Peak finding batch job with median or radial background subtraction
