@@ -1,2 +1,2 @@
 # Same version as reported in doc/ChangeLog
-__version__ = "0.1.54"
+__version__ = "0.1.55"
